# john_bot

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  argv_lister.c  bootstrap.sql.example  flake.nix  main.cpp  run.nu  schema.sql  terminal_sink.cpp
inc/: alloc.hpp  argv.hpp  as_expected.hpp  bot.hpp  common.hpp  error.hpp  kv.hpp  try.hpp
inc/assio/: as_expected.hpp
inc/irc/: client.hpp  message.hpp  replies.hpp
inc/irc/replies/: parse_raw.js  replies.ipp  replies_raw  reply_list.ipp
inc/sqlite/: aggregate.hpp  database.hpp  error.hpp  exec.hpp  query.hpp  sqlite.hpp
inc/sqlite/detail/: query.hpp
inc/telegram/: api.hpp  client.hpp  connection.hpp
inc/things/: dummy.hpp  logger.hpp  relay.hpp  tcp.hpp
src/: argv.cpp  boost_mysql.cpp  bot.cpp  error.cpp  sqlite.cpp
src/irc/: client.cpp  replies.cpp
src/telegram/: api.cpp  client.cpp  connection.cpp
src/things/: logger.cpp  relay.cpp  tcp.cpp
test/: argv.cpp  error.cpp  kv.cpp  message.cpp
